<resources>
    <string name="app_name">ViolasWallet</string>
    <string name="dialog_loading">正在加载…</string>
    <string name="language_follow_system">跟随系统</string>
    <string name="language_en">English</string>
    <string name="language_chinese_simplified">简体中文</string>
    <string name="language_chinese_traditional">繁體中文</string>
    <string name="language_follow_system_more">跟随系统</string>
    <string name="language_en_more">英文</string>
    <string name="language_chinese_simplified_more">简体中文</string>
    <string name="language_chinese_traditional_more">繁体中文</string>
    <string name="backup_mnemonic_prompt_title">备份提示</string>
    <string name="backup_mnemonic_prompt_menu">稍后备份</string>
    <string name="backup_mnemonic_prompt_btn">开始备份</string>
    <string name="backup_mnemonic_prompt_content_01">获取助记词</string>
    <string name="backup_mnemonic_prompt_content_02">备份助记词</string>
    <string name="backup_mnemonic_prompt_content_03">使用纸和笔正确抄写助记词\n如果你的手机丢失、被盗、损坏，Keystore将可以回复你的资产</string>
    <string name="backup_mnemonic_prompt_content_04">离线保管</string>
    <string name="backup_mnemonic_prompt_content_05">请妥善保管至隔离网络的安全地方\n请勿将助记词在联网环境下分享和存储，比如邮件、相册、社交应用等</string>
    <string name="backup_mnemonic_prompt_content_06">等于拥有钱包资产所有权</string>
    <string name="backup_mnemonic_warn_title">安全提醒</string>
    <string name="backup_mnemonic_warn_btn">立即备份</string>
    <string name="backup_mnemonic_warn_content_01">您的身份助记词未备份，请务必备份助记词</string>
    <string name="backup_mnemonic_warn_content_02">助记词可用于恢复身份下钱包资产，防止忘记密码、应用删除、手机丢失等情况导致资产损失</string>
    <string name="show_mnemonic_title">备份助记词</string>
    <string name="show_mnemonic_content_01">请将这些词按顺序写在纸上</string>
    <string name="show_mnemonic_content_02">不要截屏或复制到剪切板\n这将可能被第三方恶意软件收集\n造成资产损失</string>
    <string name="backup_mnemonic_show_title">备份助记词展示</string>
    <string name="confirm_mnemonic_title">确认助记词</string>
    <string name="confirm_mnemonic_content_01">请按顺序点击助记词，以确认您正确备份</string>
    <string name="confirm_mnemonic_tips_01">助记词顺序不正确，请校对</string>

    <string name="account_label_identity">身份</string>
    <string name="account_label_other">创建/导入</string>
    <string name="account_management_title">钱包管理</string>
    <string name="account_selection_title">选择钱包</string>

    <string name="btn_next_step">下一步</string>
    <string name="btn_complete">完成</string>
    <string name="action_back">返回</string>
    <string name="quit_confirmation">再次点击退出</string>
    <string name="action_confirm">确认</string>
    <string name="transfer">转账</string>
    <string name="collection">收款</string>
    <string name="copy_success">复制成功</string>
    <string name="hint_insufficient_or_trading_fees_are_confirmed">余额不足或资产还未确认</string>
    <string name="account_operation_identity_wallet">身份钱包</string>
    <string name="account_operation_other_wallet">创建/导入</string>
    <string name="title_colletction">收款</string>
    <string name="title_import_the_wallet">导入身份</string>
    <string name="title_create_the_wallet">创建身份</string>
    <string name="create_identity">创建身份</string>
    <string name="import_identity">导入身份</string>
    <string name="account_label_identity_wallet">身份钱包</string>
    <string name="account_label_other_wallet">创建/导入</string>
    <string name="action_create">创建</string>
    <string name="action_import">导入</string>
    <string name="hint_input_nickname">输入昵称</string>
    <string name="hint_wallet_password">输入钱包密码</string>
    <string name="hint_input_confirm_password">再次确认密码</string>
    <string name="hint_confirm_password_fault">确认密码不正确</string>
    <string name="hint_nickname_empty">钱包昵称不能为空</string>
    <string name="hint_input_password_short">输入的密码太短</string>
    <string name="hint_input_mnemonic_word">输入助记词单词，并用空格分隔</string>
    <string name="hint_mnemonic_error">助记词错误</string>
    <string name="action_start_import">开始导入</string>
    <string name="action_immediately_into">马上进入</string>
    <string name="hint_security_setting">安全设置</string>
    <string name="hint_backup_now">立即备份</string>
    <string name="label_current_assets">当前资产</string>
    <string name="label_transaction_records">交易记录</string>
    <string name="label_assets">资产</string>
    <string name="title_address_book">地址簿</string>
    <string name="hint_address_book">地址簿</string>
    <string name="title_add_address_book">添加地址</string>
    <string name="label_address_book_note">备注信息少于20个字</string>
    <string name="hint_note">备注</string>
    <string name="label_address">地址</string>
    <string name="hint_input_address">输入地址</string>
    <string name="action_add">添加</string>
    <string name="hint_select">选择</string>
    <string name="hint_input_note">请填写备注</string>
    <string name="hint_input_address_error">输入的地址不正确</string>
    <string name="hint_address_success">添加成功</string>
    <string name="hint_create_any_wallet">创建%1$s钱包</string>
    <string name="hint_import_any_wallet">导入%1$s钱包</string>
    <string name="hint_collection_address">收款地址</string>
    <string name="hint_input_collection_address">输入收款地址</string>
    <string name="action_copy">复制</string>
    <string name="hint_transfer_amount">余额：%1$s %2$s</string>
    <string name="hint_input_amount">输入余额</string>
    <string name="hint_slow">慢</string>
    <string name="hint_fast">快</string>
    <string name="hint_fee">手续费</string>
    <string name="action_tvHintFee">转账</string>
    <string name="title_transfer">转账</string>
    <string name="hint_please_input_amount">请填写转账金额</string>
    <string name="hint_please_input_address">请填写转账地址</string>
    <string name="title_address_assert">添加币种</string>
    <string name="title_manager">管理</string>
    <string name="hint_output_back">导出助记词</string>
    <string name="action_delete_wallet">删除钱包</string>
    <string name="hint_change_wallet_name">更换钱包名</string>
    <string name="hint_input_password">输入密码</string>
    <string name="action_cancel">取消</string>
    <string name="hint_password">密码</string>
    <string name="hint_please_input_password">请填写密码</string>
    <string name="hint_password_error">密码错误</string>
    <string name="hint_wallet_info">钱包详情</string>
    <string name="hint_input_new_wallet_name">请输入新的钱包名称</string>
    <string name="hint_modify_success">修改成功</string>
    <string name="me_wallet_management">钱包管理</string>
    <string name="me_transfer_record">转账记录</string>
    <string name="me_address_book">地址薄</string>
    <string name="me_settings">设置</string>
    <string name="hint_get_the_camera_permissions">获取相机权限</string>
    <string name="hint_set_permissions_to_open">需要获取相机权限才能扫描二维码，前往开启。</string>
    <string name="hint_scan_need_camera_permissions">扫码需要获取相机权限</string>
    <string name="action_scan_address">扫描钱包地址</string>
    <string name="title_scan">扫一扫</string>

    <string name="add_wallet_title">添加钱包</string>

    <string name="setting_title">设置</string>
    <string name="setting_multi_language">多语言</string>
    <string name="setting_service_agreement">服务协议</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_help_feedback">帮助与反馈</string>
    <string name="setting_app_name_version">Violas %1$s</string>

    <string name="about_us_title">关于我们</string>
    <string name="about_us_website_key">官方网站</string>
    <string name="about_us_website_value">www.violas.io</string>
    <string name="about_us_email_key">邮箱</string>
    <string name="about_us_email_value">kf@violas.io</string>
    <string name="about_us_wechat_key">微信</string>
    <string name="about_us_wechat_value">xxxxx</string>
    <string name="about_us_qq_key">QQ</string>
    <string name="about_us_qq_value">xxxxx</string>
    <string name="about_us_weibo_key">微博</string>
    <string name="about_us_weibo_value">xxxxx</string>
    <string name="about_us_telegram_key">Telegram</string>
    <string name="about_us_telegram_value">xxxxx</string>
    <string name="about_us_twitter_key">Twitter</string>
    <string name="about_us_twitter_value">xxxxx</string>
    <string name="about_us_facebook_key">Facebook</string>
    <string name="about_us_facebook_value">xxxxx</string>
    <string name="hint_address_error">地址有误</string>

    <string name="web_load_failed_tips">无法打开页面</string>
    <string name="web_load_failed_retry">轻触屏幕重新加载</string>
    <string name="web_user_agent">%1$s/Violas Wallet Android Client %2$s.%3$d</string>

    <string name="service_agreement_title">服务协议</string>
    <string name="service_agreement_url">https://www.baidu.com/</string>
    <string name="help_feedback_title">帮助与反馈</string>
    <string name="help_feedback_menu">问题反馈</string>
    <string name="help_feedback_url">https://www.baidu.com/</string>
    <string name="feedback_title">问题反馈</string>
    <string name="feedback_hint_input_content">请输入内容</string>
    <string name="feedback_hint_input_contact">请输入您的联系方式</string>
    <string name="feedback_content_count">%1$d/%2$d</string>

    <string name="http_error_code">错误码</string>
    <string name="http_request_fail">请求失败</string>
    <string name="http_connect_timeout">请求超时, 请检查网络设置</string>
    <string name="http_socket_timeout">网络超时, 请检查网络设置</string>
    <string name="http_certificate_invalid">服务器证书无效</string>
    <string name="http_unknown_host">无法访问主机, 请检查网络设置</string>
    <string name="http_not_network">无网络连接, 请检查网络设置</string>
    <string name="http_connect_exception">连接到服务器失败</string>
    <string name="http_data_exception">响应数据无法处理</string>
    <string name="http_network_unavailable">网络不可用, 请检查网络设置</string>
    <string name="http_unknown_error">未知错误</string>

    <string name="data_load_status_empty">没有查询到对应的数据</string>
    <string name="data_load_status_failed">加载失败, 下拉重新加载</string>
    <string name="data_load_status_no_network">没有网络, 请联网后下拉重试</string>
    <string name="refresh_footer_no_network">没有网络, 请联网后点击重试</string>
    <string name="refresh_footer_failed">加载失败, 点击重新加载</string>
    <string name="refresh_footer_finish">加载完成</string>
    <string name="refresh_footer_loading">正在加载…</string>
    <string name="refresh_footer_no_more">没有更多数据了</string>
    <string name="refresh_footer_pulling">上拉加载更多</string>
    <string name="refresh_footer_refreshing">等待头部刷新完成…</string>
    <string name="refresh_footer_release">释放立即加载</string>
    <string name="refresh_header_failed">刷新失败</string>
    <string name="refresh_header_finish">刷新完成</string>
    <string name="refresh_header_loading">等待底部加载完成…</string>
    <string name="refresh_header_pulling">下拉可以刷新</string>
    <string name="refresh_header_refreshing">正在刷新…</string>
    <string name="refresh_header_release">释放立即刷新</string>
    <string name="refresh_header_update">上次更新 M-d HH:mm</string>

    <string name="click_to_reload">点击重新加载</string>
    <string name="tips_transfer_record_empty">暂无交易记录</string>
    <string name="title_market">市场</string>
    <string name="hint_transfer_number">转出数量</string>
    <string name="hint_receipt_number">收到数量</string>
    <string name="hint_parities">汇率</string>
    <string name="title_change_language">修改语言</string>
    <string name="transaction_record_title">交易记录</string>
    <string name="transaction_record_time">日期</string>
    <string name="transaction_record_amount">数量</string>
    <string name="transaction_record_receipt">收款</string>
    <string name="transaction_record_payment">付款</string>
    <string name="transaction_record_query">浏览器查询</string>

    <string name="account_tips_not_found">钱包账号不存在</string>
</resources>
